Added custom metrics page

--- a/templates/dashboard/_nav.html.twig
+++ b/templates/dashboard/_nav.html.twig
@@ -30,6 +30,9 @@
           </li>
         </ul>
       </li>
+      <li class="tooltip" data-tippy-content="Custom Metrics">
+        <a class="menu-icon menu-icon-metrics" href="/dashboard/custommetrics">Custom Metrics</a>
+      </li>
       <li class="tooltip" data-tippy-content="Users">
         <a class="menu-icon menu-icon-users" href="/dashboard/users">Users</a>
       </li>
