--- a/assets/css/shared/_forms.scss
+++ b/assets/css/shared/_forms.scss
@@ -816,6 +816,7 @@ fieldset[disabled] .form-control {
 .btn-primary:hover{
   background-color: #1f5791;
   color: #fff;
+  text-decoration: none;
 }
 
 .btn-primary:disabled{
