--- a/templates/dashboard/incident/viewall.html.twig
+++ b/templates/dashboard/incident/viewall.html.twig
@@ -18,6 +18,52 @@
   <div class="container-fluid container-fixed-lg">
     <div class="row">
       <div class="col-lg-12">
+
+
+
+
+
+
+
+        <table id="incident-view-table" class="uk-table uk-table-hover uk-table-striped is-hidden">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Created</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+
+            {% for incident in incidents %}
+            <tr data-id="{{ incident.guid }}">
+              <td data-order="{{ incident.name }}">
+                <div class="list-item">
+                  <div class="list-item-decoration">
+                    <i class="list-item-icon status-icon status-icon-{{ incident.status.type }}"></i>
+                  </div>
+                  <div class="list-item-content">
+                    <span class="list-item-title">{{ incident.name }}</span>
+                    <span class="list-item-createdby">{{ incident.createdBy.fullName }}</span>
+                    <span class="list-item-description ellipsis-3">{{ incident.message }}</span>
+                  </div>
+                </div>
+              </td>
+              <td>{{ incident.created|date("m/d/Y g:ia") }}</td>
+              <td>
+                <button class="btn btn-error btn-delete pull-right">Delete</button>
+                <a class="btn btn-primary pull-right" href="/dashboard/incidents/{{ incident.guid }}">Update</a>
+              </td>
+            </tr>
+            {% endfor %}
+
+          </tbody>
+        </table>
+
+
+
+<!--
+
         <div class="dashboard-panel-block">
           <div id="incident-view-list" class="table-list">
 
@@ -45,7 +91,10 @@
             {% endif %}
 
           </div>
-        </div>
+        </div>-->
+
+
+
       </div>
     </div>
   </div>
