--- a/templates/dashboard/servicestatus/viewall.html.twig
+++ b/templates/dashboard/servicestatus/viewall.html.twig
@@ -18,7 +18,28 @@
   <div class="container-fluid container-fixed-lg">
     <div class="row">
       <div class="col-lg-12">
-        <div class="dashboard-panel-block">
+        <table id="service-status-view-table" class="uk-table uk-table-hover uk-table-striped is-hidden">
+          <thead>
+            <tr>
+              <th>Status</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
+
+            {% for status in serviceStatuses %}
+            <tr data-id="{{ status.guid }}">
+              <td>{{ status.name }}</td>
+              <td>
+                <button class="btn btn-error pull-right btn-delete">Delete</button>
+                <button class="btn btn-primary pull-right" onclick="window.location.href='/dashboard/statuses/service/{{ status.guid }}'" {% if not status.editable %}disabled{% endif %}>Edit</button>
+              </td>
+            </tr>
+            {% endfor %}
+
+          </tbody>
+        </table>
+        <!--<div class="dashboard-panel-block">
           <div id="service-status-view-list" class="table-list">
 
             {% for status in serviceStatuses %}
@@ -39,7 +60,7 @@
             {% endif %}
 
           </div>
-        </div>
+        </div>-->
       </div>
     </div>
   </div>
