--- a/templates/dashboard/subscription/viewall.html.twig
+++ b/templates/dashboard/subscription/viewall.html.twig
@@ -17,7 +17,7 @@
   <div class="container-fluid container-fixed-lg">
     <div class="row">
       <div class="col-lg-12">
-        <table id="subscription-view-table" class="stripe hover">
+        <table id="subscription-view-table" class="uk-table uk-table-hover uk-table-striped is-hidden">
           <thead>
             <tr>
               <th>Email</th>
