--- a/templates/dashboard/user/viewall.html.twig
+++ b/templates/dashboard/user/viewall.html.twig
@@ -18,7 +18,7 @@
   <div class="container-fluid container-fixed-lg">
     <div class="row">
       <div class="col-lg-12">
-        <table id="user-view-table" class="stripe hover">
+        <table id="user-view-table" class="uk-table uk-table-hover uk-table-striped is-hidden">
           <thead>
             <tr>
               <th>Name</th>
