--- a/templates/dashboard/maintenancestatus/viewall.html.twig
+++ b/templates/dashboard/maintenancestatus/viewall.html.twig
@@ -22,13 +22,13 @@
           <div id="maintenance-status-view-list" class="table-list">
 
             {% for status in maintenanceStatuses %}
-              <div class="list-item" data-id="{{ status.guid }}">
+              <div class="list-item" data-id="{{ status.hashId }}">
                 <div class="list-item-left">
                   <span class="list-item-title">{{ status.name }}</span>
                   <span class="list-item-description">...</span>
                 </div>
                 <div class="list-item-right">
-                  <button class="btn btn-primary" onclick="window.location.href='/dashboard/statuses/maintenance/{{ status.guid }}'" {% if not status.editable %}disabled{% endif %}>Edit</button>
+                  <button class="btn btn-primary" onclick="window.location.href='/dashboard/statuses/maintenance/{{ status.hashId }}'" {% if not status.editable %}disabled{% endif %}>Edit</button>
                   <button class="btn btn-error btn-delete" {% if not status.deletable %}disabled{% endif %}>Delete</button>
                 </div>
               </div>
