--- a/templates/dashboard/servicecategory/viewall.html.twig
+++ b/templates/dashboard/servicecategory/viewall.html.twig
@@ -22,13 +22,13 @@
           <div id="service-category-view-list" class="table-list">
 
             {% for serviceCategory in serviceCategories %}
-              <div class="list-item" data-id="{{ serviceCategory.guid }}">
+              <div class="list-item" data-id="{{ serviceCategory.hashId }}">
                 <div class="list-item-left">
                   <span class="list-item-title">{{ serviceCategory.name }}</span>
                   <span class="list-item-description">{{ serviceCategory.hint }}</span>
                 </div>
                 <div class="list-item-right">
-                  <a class="btn btn-primary" href="/dashboard/servicecategories/{{ serviceCategory.guid }}">Edit</a>
+                  <a class="btn btn-primary" href="/dashboard/servicecategories/{{ serviceCategory.hashId }}">Edit</a>
                   <button class="btn btn-error btn-delete" {% if not serviceCategory.deletable %}disabled{% endif %}>Delete</button>
                 </div>
               </div>
