--- a/templates/dashboard/subscription/viewall.html.twig
+++ b/templates/dashboard/subscription/viewall.html.twig
@@ -28,7 +28,7 @@
           <tbody>
 
             {% for subscription in subscriptions %}
-            <tr data-id="{{ subscription.guid }}">
+            <tr data-id="{{ subscription.hashId }}">
               <td>{{ subscription.email }}</td>
               <td>{{ subscription.created|date("m/d/Y g:ia") }}</td>
               <td>
