--- a/templates/mail/subscriptioncreated.html.twig
+++ b/templates/mail/subscriptioncreated.html.twig
@@ -36,7 +36,7 @@
       <table align="center" cellspacing="0" cellpadding="0" style="padding:0;vertical-align:top;width:auto;">
         <tr style="padding:0;text-align:left;vertical-align:top">
           <td style="-moz-hyphens:auto;-webkit-hyphens:auto;Margin:0;background:#6441A4;border:2px solid #6441A4;border-collapse:collapse!important;color:#fff;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;hyphens:auto;line-height:1.3;margin:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word">
-            <a href="{{ config.siteURL }}/subscription/{{ subscriber.guid }}" style="Margin:0;border:0 solid #6441A4;border-radius:3px;color:#fff;display:inline-block;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:regular;line-height:1.3;margin:0;padding:10px 55px 10px 55px;text-align:left;text-decoration:none">
+            <a href="{{ config.siteURL }}/subscription/{{ subscriber.hashId }}" style="Margin:0;border:0 solid #6441A4;border-radius:3px;color:#fff;display:inline-block;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:regular;line-height:1.3;margin:0;padding:10px 55px 10px 55px;text-align:left;text-decoration:none">
               Manage Your Subscription
             </a>
           </td>
