--- a/assets/css/dashboard/_components.scss
+++ b/assets/css/dashboard/_components.scss
@@ -46,37 +46,39 @@
 //feedback notifications
 .feedback-wrapper{
   width: 100%;
+  max-width: 450px;
   position: fixed;
   z-index: 120;
   top: -100px;
+  left: 50%;
+  margin-left: -225px;
   transition: .50s all ease-in-out;
   opacity: 0;
 
   &.visible{
-    top: 20px;
+    top: 30px;
     opacity: 1;
   }
 
   .feedback{
     width: 100%;
-    max-width: 450px;
     padding: 1.5rem 1.3rem;
     text-align: center;
     color: #fff;
     border-radius: 5px;
     margin: 0 auto;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
 
     &.success{
-      background: #2ea822;
-      border: 2px solid green;
+      background:#00c851;
     }
 
     &.warning{
-      background: #e6943e;
+      background: #fb3;
     }
 
     &.error{
-      background: #ac2f2f;
+      background: #ff3547;
     }
 
     .feedback-close-btn{
@@ -375,7 +377,7 @@
 
 .list-item-description{
   display: block;
-  padding-bottom: 1rem;
+  //padding-bottom: 1rem;
 }
 
 .list-item-icon::before{
