--- a/templates/dashboard/maintenance/viewall.html.twig
+++ b/templates/dashboard/maintenance/viewall.html.twig
@@ -18,34 +18,40 @@
   <div class="container-fluid container-fixed-lg">
     <div class="row">
       <div class="col-lg-12">
-        <div class="dashboard-panel-block">
-          <div id="maintenance-view-list" class="table-list">
+        <table id="maintenance-view-table" class="uk-table uk-table-hover uk-table-striped is-hidden">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Created</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
 
             {% for record in maintenance %}
-              <div class="list-item" data-id="{{ record.hashId }}">
-                <div class="list-item-left">
+            <tr data-id="{{ record.hashId }}">
+              <td data-order="{{ record.name }}">
+                <div class="list-item">
                   <div class="list-item-decoration">
                     <i class="list-item-icon status-icon status-icon-{{ record.status.type }}"></i>
                   </div>
                   <div class="list-item-content">
-                    <span class="list-item-title">{{ record.name }}</span>
+                    <a class="list-item-title" href="/dashboard/maintenance/{{ record.hashId }}">{{ record.name }}</a>
                     <span class="list-item-createdby">{{ record.createdBy.fullName }}</span>
                     <span class="list-item-description ellipsis-3">{{ record.purpose }}</span>
                   </div>
                 </div>
-                <div class="list-item-right">
-                  <a class="btn btn-primary" href="/dashboard/maintenance/{{ record.hashId }}">Update</a>
-                  <button class="btn btn-error btn-delete">Delete</button>
-                </div>
-              </div>
+              </td>
+              <td>{{ record.created|date("m/d/Y g:ia") }}</td>
+              <td>
+                <button class="btn btn-error btn-delete pull-right">Delete</button>
+                <a class="btn btn-primary pull-right" href="/dashboard/maintenance/{{ record.hashId }}">Update</a>
+              </td>
+            </tr>
             {% endfor %}
 
-            {% if maintenance is empty %}
-              <span class="empty-list">Nothing scheduled</span>
-            {% endif %}
-
-          </div>
-        </div>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
