--- a/templates/dashboard/service/viewall.html.twig
+++ b/templates/dashboard/service/viewall.html.twig
@@ -18,34 +18,37 @@
   <div class="container-fluid container-fixed-lg">
     <div class="row">
       <div class="col-lg-12">
-        <div class="dashboard-panel-block">
-          <div id="service-view-list" class="table-list">
+        <table id="service-view-table" class="uk-table uk-table-hover uk-table-striped is-hidden">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
 
             {% for service in services %}
-
-            <div class="list-item" data-id="{{ service.hashId }}">
-              <div class="list-item-left">
-                <div class="list-item-decoration">
-                  <i class="list-item-bubble status-bubble status-bubble-{{ service.status.type }}"></i>
+            <tr data-id="{{ service.hashId }}">
+              <td data-order="{{ service.name }}">
+                <div class="list-item">
+                  <div class="list-item-decoration">
+                    <i class="list-item-bubble status-bubble status-bubble-{{ service.status.type }}"></i>
+                  </div>
+                  <div class="list-item-content">
+                    <span class="list-item-title">{{ service.name }}</span>
+                    <span class="list-item-description ellipsis-3">{{ service.description }}</span>
+                  </div>
                 </div>
-                <div class="list-item-content">
-                  <span class="list-item-title">{{ service.name }}</span>
-                  <span class="list-item-description">{{ service.description }}</span>
-                </div>
-              </div>
-              <div class="list-item-right">
-                <a class="btn btn-primary" href="/dashboard/services/{{ service.hashId }}">Edit</a>
-                <button class="btn btn-error btn-delete">Delete</button>
-              </div>
-            </div>
+              </td>
+              <td>
+                <button class="btn btn-error pull-right btn-delete">Delete</button>
+                <a href="/dashboard/services/{{ service.hashId }}" class="btn btn-primary pull-right">Edit</a>
+              </td>
+            </tr>
             {% endfor %}
 
-            {% if services is empty %}
-            <span class="empty-list">Nothing to report on here</span>
-            {% endif %}
-
-          </div>
-        </div>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
