Added custom metric app widget

--- a/assets/css/app/_components.scss
+++ b/assets/css/app/_components.scss
@@ -137,7 +137,8 @@
 }
 
 
-.service-uptime-chart-widget{
+.service-uptime-chart-widget,
+.custom-metric-chart-widget{
   background: #fff;
   height: 400px;
 }
