--- a/assets/css/app/_theme.scss
+++ b/assets/css/app/_theme.scss
@@ -38,7 +38,8 @@
     background: #ccc;
   }
 
-  .service-uptime-chart-widget{
+  .service-uptime-chart-widget,
+  .custom-metric-chart-widget{
     background: #ccc;
   }
 
