Finished converting list views to tables

--- a/assets/css/dashboard/_overrides.scss
+++ b/assets/css/dashboard/_overrides.scss
@@ -79,6 +79,10 @@ table.dataTable tr.is-deleting td{
   margin-top: 0;
 }
 
+.uk-table td{
+  padding: 1.6rem;
+}
+
 //tippy-tooltip
 .tippy-tooltip {
   font-size: 1.3rem;
