--- a/templates/dashboard/custommetric/viewall.html.twig
+++ b/templates/dashboard/custommetric/viewall.html.twig
@@ -7,9 +7,9 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="breadcrumb-container">
-          <span class="breadcrumb">Maintenance Statuses</span>
+          <span class="breadcrumb">Custom Metrics</span>
         </div>
-        <a class="action-btn btn btn-primary pull-right" href="/dashboard/statuses/maintenance/add">Add Status</a>
+        <a class="action-btn btn btn-primary pull-right" href="/dashboard/custommetrics/add">Add Custom Metric</a>
       </div>
     </div>
   </div>
@@ -18,27 +18,29 @@
   <div class="container-fluid container-fixed-lg">
     <div class="row">
       <div class="col-lg-12">
-        <table id="maintenance-status-view-table" class="uk-table uk-table-hover uk-table-striped is-hidden">
+        <table id="custommetric-view-table" class="uk-table uk-table-hover uk-table-striped is-hidden">
           <thead>
             <tr>
-              <th>Status</th>
+              <th>Name</th>
+              <th>Id</th>
               <th></th>
             </tr>
           </thead>
           <tbody>
 
-            {% for status in maintenanceStatuses %}
-            <tr data-id="{{ status.hashId }}">
-              <td>{{ status.name }}</td>
+            {% for metric in metrics %}
+            <tr data-id="{{ metric.hashId }}">
+              <td>{{ metric.name }}</td>
+              <td>{{ metric.hashId}}</td>
               <td>
                 <button class="btn btn-error pull-right btn-delete">Delete</button>
-                <button class="btn btn-primary pull-right" onclick="window.location.href='/dashboard/statuses/maintenance/{{ status.hashId }}'" {% if not status.editable %}disabled{% endif %}>Edit</button>
+                <a class="btn btn-primary pull-right" href="/dashboard/custommetrics/{{ metric.hashId }}">Edit</a>
               </td>
             </tr>
             {% endfor %}
 
           </tbody>
-        </table> 
+        </table>
       </div>
     </div>
   </div>
