--- a/templates/dashboard/servicecategory/viewall.html.twig
+++ b/templates/dashboard/servicecategory/viewall.html.twig
@@ -18,28 +18,32 @@
   <div class="container-fluid container-fixed-lg">
     <div class="row">
       <div class="col-lg-12">
-        <div class="dashboard-panel-block">
-          <div id="service-category-view-list" class="table-list">
+        <table id="servicecategory-view-table" class="uk-table uk-table-hover uk-table-striped is-hidden">
+          <thead>
+            <tr>
+              <th>Category</th>
+              <th></th>
+            </tr>
+          </thead>
+          <tbody>
 
             {% for serviceCategory in serviceCategories %}
-              <div class="list-item" data-id="{{ serviceCategory.hashId }}">
-                <div class="list-item-left">
+            <tr data-id="{{ serviceCategory.hashId }}">
+              <td data-order="{{ serviceCategory.name }}">
+                <div class="list-item">
                   <span class="list-item-title">{{ serviceCategory.name }}</span>
-                  <span class="list-item-description">{{ serviceCategory.hint }}</span>
+                  <span class="list-item-description ellipsis-3">{{ serviceCategory.hint }}</span>
                 </div>
-                <div class="list-item-right">
-                  <a class="btn btn-primary" href="/dashboard/servicecategories/{{ serviceCategory.hashId }}">Edit</a>
-                  <button class="btn btn-error btn-delete" {% if not serviceCategory.deletable %}disabled{% endif %}>Delete</button>
-                </div>
-              </div>
+              </td>
+              <td>
+                <button class="btn btn-error pull-right btn-delete">Delete</button>
+                <a class="btn btn-primary pull-right" href="/dashboard/servicecategories/{{ serviceCategory.hashId }}">Edit</a>
+              </td>
+            </tr>
             {% endfor %}
 
-            {% if serviceCategories is empty %}
-              <span class="empty-list">No categories created</span>
-            {% endif %}
-
-          </div>
-        </div>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
