Finished adding exchange calendar sync

--- a/templates/dashboard/settings/viewall.html.twig
+++ b/templates/dashboard/settings/viewall.html.twig
@@ -57,6 +57,11 @@
         {{ form_row(form.mailFromAddress) }}
         {{ form_row(form.mailFromName) }}
       </div>
+      <div class="dashboard-panel-block">
+        <h3 class="dashboard-panel-header">Calendar</h3>
+        {{ form_row(form.enableExchangeCalendarSync) }}
+        {{ form_row(form.enableGoogleCalendarSync) }}
+      </div>
     </div>
   </div>
 </div>
