--- a/assets/css/dashboard/_components.scss
+++ b/assets/css/dashboard/_components.scss
@@ -641,3 +641,17 @@
   border: 1px solid rgba(0,0,0,.15);
   border-radius: .25rem;
 }
+
+//log viewer
+.log-viewer{
+  overflow: hidden;
+
+  .log-row{
+    padding: 1rem;
+    line-height: 1.4;
+
+    &:nth-child(odd){
+      background: #ddd;
+    }
+  }
+}
