--- a/templates/dashboard/_nav.html.twig
+++ b/templates/dashboard/_nav.html.twig
@@ -42,6 +42,9 @@
       <li class="tooltip" data-tippy-content="Settings">
         <a class="menu-icon menu-icon-settings" href="/dashboard/settings">Settings</a>
       </li>
+      <li class="tooltip" data-tippy-content="Logs">
+        <a class="menu-icon menu-icon-logs" href="/dashboard/logs">Logs</a>
+      </li>
     </ul>
   </nav>
   <button class="dashboard-nav-pin-btn"></button>
