--- a/assets/css/dashboard/_nav.scss
+++ b/assets/css/dashboard/_nav.scss
@@ -128,6 +128,10 @@
   content: "\f013";
 }
 
+.menu-icon-logs:after{
+  content: "\f1d8";
+}
+
 .menu-icon-subscription::after{
   content: "\f0e0";
 }
