--- a/templates/app/appbase.html.twig
+++ b/templates/app/appbase.html.twig
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="{{ config.siteAbout }}">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <title>{% block title %}Signal{% endblock %}</title>
+    <title>{% block title %}{{ config.siteName }}{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     {{ encore_entry_link_tags('app') }}
