Rough add of SAML2 SSO

--- a/assets/css/shared/_forms.scss
+++ b/assets/css/shared/_forms.scss
@@ -133,8 +133,8 @@ textarea.form-control{
 }
 
 .collection-group .form-group{
-  padding-left: 0;
-  padding-right: 0;
+//  padding-left: 0;
+  //padding-right: 0;
 }
 
 
