Add links widget for maintenance and incidents

--- a/assets/css/app/_components.scss
+++ b/assets/css/app/_components.scss
@@ -32,7 +32,7 @@
 
 //no items text
 .no-items-found{
-  
+
 }
 
 //services widget
@@ -115,8 +115,22 @@
   }
 }
 
+//past future links widgets
+.past-future-links-widget{
+  .custom-link{
+    background: #ccc;
+    padding: .5rem 1.5rem;
+    border-radius: 1.5rem;
+    color: #333;
+    margin-right: 2rem;
+    transition: color .15s linear, background-color .15s linear;
 
-
+    &:hover{
+      background: #333;
+      color: #eee;
+    }
+  }
+}
 
 //metrics overview widgets
 .metrics-overview-widget{
