--- a/templates/app/home.html.twig
+++ b/templates/app/home.html.twig
@@ -20,6 +20,8 @@
     <div class="service-uptime-chart-widget-root" data-id="{{ widget.hashId }}"></div>
   {% elseif widget.type == 'custom-metric-chart' %}
     <div class="custom-metric-chart-widget-root" data-id="{{ widget.hashId }}"></div>
+  {% elseif widget.type == 'past-future-links' %}
+    <div class="past-future-links-widget-root" data-id="{{ widget.hashId }}"></div>
   {% endif %}
 {% endfor %}
 
