--- a/assets/css/app/_theme.scss
+++ b/assets/css/app/_theme.scss
@@ -69,6 +69,11 @@
     color: #eee;
   }
 
+  //service management
+  .subscription-management-text{
+    color: #eee;
+  }
+
   .loader{
     background: #fff;
   }
@@ -151,6 +156,11 @@
 
   //no items text
   .no-items-found{
+    color: #eee;
+  }
+
+  //service management
+  .subscription-management-text{
     color: #eee;
   }
 
