--- a/templates/app/subscription.html.twig
+++ b/templates/app/subscription.html.twig
@@ -27,6 +27,7 @@
 
 <div class="content-block">
   <div class="content-block-inner">
+    <p class="subscription-management-text">You may manage your subscription alert preferences below.</p>
     {{ form_start(subscriptionManagementForm) }}
     {{ form_widget(subscriptionManagementForm) }}
     <button type="submit" class="btn btn-primary">Save Preferences</button>
