--- a/assets/css/shared/_forms.scss
+++ b/assets/css/shared/_forms.scss
@@ -924,14 +924,18 @@ form .btn{
 }
 
 .editable-text-wrapper .editable-text{
-  background: none;
-  border: 0;
   display: inline-block;
   width: auto;
   color: #000;
 }
 
-.editable-text-wrapper .editable-text:disabled{
+.editable-text-wrapper .editable-text:read-only{
+  background: none;
+  border: 0;
+}
+
+.editable-text-wrapper .editable-text:disabled,
+.editable-text-wrapper .editable-text:read-only{
   color: #888;
 }
 
